--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "kuzdowicz",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.4.7",
     "body-parser": "^1.16.0",
     "express": "^4.14.1",
     "mongoose": "^4.8.0"
