--- a/client/package.json
+++ b/client/package.json
@@ -4,26 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --progress --profile --colors",
+    "start": "webpack --progress --colors --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "kuzdowicz",
-  "license": "ISC",
+  "license": "",
+  "dependencies": {
+    "react": "^0.14.5",
+    "react-dom": "^0.14.5"
+  },
   "devDependencies": {
-    "babel-core": "^6.22.1",
-    "babel-loader": "^6.2.10",
-    "babel-plugin-transform-class-properties": "^6.22.0",
-    "babel-plugin-transform-react-inline-elements": "^6.8.0",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.22.0",
-    "babel-preset-stage-0": "^6.0.15",
-    "file-loader": "^0.10.0",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-hot-loader": "^3.0.0-beta.3",
-    "webpack": "^2.2.1",
-    "webpack-dev-middleware": "^1.9.0",
-    "webpack-dev-server": "^1.16.2",
-    "webpack-hot-middleware": "^2.0.0"
+    "babel-core": "^6.3.26",
+    "babel-loader": "^6.2.0",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "webpack": "^1.12.9"
   }
 }
