--- a/client/package.json
+++ b/client/package.json
@@ -5,11 +5,13 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --progress --profile --colors",
+    "build": "webpack --config webpack.config.js --progress --profile --colors",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "kuzdowicz",
   "license": "",
   "dependencies": {
+    "axios": "^0.15.3",
     "react": "^0.14.5",
     "react-dom": "^0.14.5"
   },
