--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,10 @@
     "bluebird": "^3.4.7",
     "body-parser": "^1.16.0",
     "express": "^4.14.1",
-    "mongoose": "^4.8.0"
+    "mocha": "^3.2.0",
+    "mongoose": "^4.8.0",
+    "should": "^11.2.0",
+    "sinon": "^1.17.7",
+    "sinon-as-promised": "^4.0.2"
   }
 }
