--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.16.0",
     "express": "^4.14.1",
     "mocha": "^3.2.0",
+    "mocha-logger": "^1.0.5",
     "mongoose": "^4.8.0",
     "should": "^11.2.0",
     "sinon": "^1.17.7",
