--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^4.8.0",
     "should": "^11.2.0",
     "sinon": "^1.17.7",
-    "sinon-as-promised": "^4.0.2"
+    "sinon-as-promised": "^4.0.2",
+    "sinon-mongoose": "^1.3.0"
   }
 }
