--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "axios": "^0.15.3",
     "react": "^0.14.5",
-    "react-dom": "^0.14.5"
+    "react-dom": "^0.14.5",
+    "react-router": "^3.0.2"
   },
   "devDependencies": {
     "babel-core": "^6.3.26",
