setting up architecture for adding order service

--- a/cars-repo-ui/package.json
+++ b/cars-repo-ui/package.json
@@ -8,7 +8,7 @@
     "build": "webpack --config webpack.config.js --progress --profile --colors",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "kuzdowicz",
+  "author": "Martin Kuzdowicz",
   "license": "",
   "dependencies": {
     "axios": "^0.15.3",
