--- a/cars-crud-serice/package.json
+++ b/cars-crud-serice/package.json
@@ -7,7 +7,7 @@
     "test": "./node_modules/mocha/bin/mocha src/tests/carsControllerTest.js",
     "start": "node app.js"
   },
-  "author": "kuzdowicz",
+  "author": "Martin Kuzdowicz",
   "license": "ISC",
   "dependencies": {
     "bluebird": "^3.4.7",
