--- a/cars-orders-service/package.json
+++ b/cars-orders-service/package.json
@@ -16,6 +16,7 @@
     "express": "^4.14.1",
     "mocha": "^3.2.0",
     "mocha-logger": "^1.0.5",
-    "sinon": "^1.17.7"
+    "sinon": "^1.17.7",
+    "uuid": "^3.0.1"
   }
 }
