--- a/cars-crud-service/package.json
+++ b/cars-crud-service/package.json
@@ -10,6 +10,7 @@
   "author": "Martin Kuzdowicz",
   "license": "ISC",
   "dependencies": {
+    "amqplib": "^0.5.1",
     "bluebird": "^3.4.7",
     "body-parser": "^1.16.0",
     "express": "^4.14.1",
